--- a/Trainings/DataFest Kampala.Rmd
+++ b/Trainings/DataFest Kampala.Rmd
@@ -134,7 +134,7 @@ traindemographics$gender <- gender
 
 ## Generate State
 state <- sample(c("Oyo","Bauchi","Enugu","Lagos","Ogun","Kadun"), nrow(traindemographics),replace = T)
-traindemographics$gender<-gender
+traindemographics$state<-state
 
 ## Age
   ### Convert to character
@@ -182,6 +182,7 @@ print(kable_styling(kable(summ_table,col.names = c("Age Categories","Frequency",
 
 summ_graph <- ggplot(summ_table, aes(x=age_category,y=perc))+
               geom_bar(stat = "identity", fill="brown")+
+              geom_text(aes(label =perc),vjust = -0.25, size = 4)+
               kampala_theme+
               labs(title = "Distribution of Age",x="Age Categories",
                    y="Percentage")
@@ -208,6 +209,7 @@ print(kable_styling(kable(summ_table,col.names = c(xlab,"Frequency","Percentage"
 
 summ_graph <- ggplot(summ_table, aes_string(x=xvar,y="perc"))+
               geom_bar(stat = "identity", fill="brown")+
+              geom_text(aes(label =perc),vjust = -0.25, size = 4)+
               kampala_theme+
               labs(title = paste("Distribution of",title),x=xlab,
                    y="Percentage")
@@ -217,8 +219,8 @@ print(summ_graph)
 
 ## Generate a vector containing tha variables whose summary statistics you want to obtain.
 
-vars<- c("bank_account_type","gender","age_category")
-xlabs<-c("Bank Account Type","Gender","Age Categories")
+vars<- c("bank_account_type","gender","age_category","state")
+xlabs<-c("Bank Account Type","Gender","Age Categories","State")
 for(i in 1: length(vars)){
   summ_function(vars[i],xlabs[i],xlabs[i])
 }
